<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:paddingTop="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_back_btn"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:contentDescription="@string/App_Name"
            android:src="@drawable/ic_back"
            android:layout_marginBottom="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorIcons" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/about_us"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            android:includeFontPadding="false"
            android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="@id/img_back_btn"
            app:layout_constraintStart_toEndOf="@+id/img_back_btn"
            app:layout_constraintTop_toTopOf="@id/img_back_btn"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.269"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/created_by"
            android:textColor="@color/colorTextSubtitle"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/mohammed_sahil"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_19ssp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_linkedin"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_linkedin"
                android:contentDescription="@string/linkedin"
                android:layout_marginHorizontal="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_8sdp"/>
            <ImageView
                android:id="@+id/img_github"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:contentDescription="@string/github"
                android:src="@drawable/ic_github" />
            <ImageView
                android:id="@+id/img_instagram"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_instagram"
                android:contentDescription="@string/instagram"
                android:layout_marginHorizontal="@dimen/_6sdp"
                android:layout_marginStart="@dimen/_4sdp"/>
        </LinearLayout>

    </LinearLayout>

    <!--   Social Media Links-->
    <!--
    -->

</androidx.constraintlayout.widget.ConstraintLayout>