<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_AddUrl_Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_12sdp"
    android:paddingStart="@dimen/_2sdp"
    android:padding="@dimen/_5sdp"
    android:background="@drawable/bg_dialog">
    
    <ImageView
        android:id="@+id/img_AddUrl"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_url"
        android:tint="@color/colorWhite"
        app:layout_constraintTop_toTopOf="@+id/layout_AddUrl_Container"
        app:layout_constraintStart_toStartOf="@+id/layout_AddUrl_Container"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="Add URL"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp"
        android:includeFontPadding="false"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        app:layout_constraintStart_toEndOf="@+id/img_AddUrl"
        app:layout_constraintTop_toTopOf="@+id/img_AddUrl"
        app:layout_constraintBottom_toBottomOf="@+id/img_AddUrl"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edt_url"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="Enter a url"
        android:textColorHint="@color/colorTextHint"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:paddingHorizontal="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:imeOptions="actionDone"
        android:inputType="textUri"
        android:importantForAutofill="no"
        android:background="@null"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/img_AddUrl"/>

    <TextView
        android:id="@+id/txt_Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/colorAccent"
        android:padding="@dimen/_4sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/edt_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/txt_Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_12sdp"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        android:padding="@dimen/_4sdp"
        app:layout_constraintEnd_toStartOf="@id/txt_Add"
        app:layout_constraintTop_toBottomOf="@id/edt_url"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>