<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddNote"
    android:background="@color/colorPrimary">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_12sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">


            <ImageView
                android:id="@+id/img_back_btn"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:contentDescription="@string/App_Name"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorIcons" />

            <ImageView
                android:id="@+id/img_done_btn"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:background="@drawable/bg_done_btn"
                android:contentDescription="@string/App_Name"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_done"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorIcons" />

            <EditText
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@null"
                android:fontFamily="@font/poppins_bold"
                android:hint="@string/enter_the_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:paddingStart="@dimen/_4sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toBottomOf="@+id/img_back_btn" />

            <TextView
                android:id="@+id/txt_dateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_2sdp"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_title" />

            <EditText
                android:id="@+id/edt_note_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@null"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/note_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingHorizontal="@dimen/_4sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/note_subtitle_indicator"
                app:layout_constraintTop_toBottomOf="@+id/txt_dateTime" />

            <View
                android:id="@+id/note_subtitle_indicator"
                android:layout_width="@dimen/_3sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_9sdp"
                android:background="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@id/edt_note_subtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/edt_note_subtitle" />

            <!--            Note Image-->
            <ImageView
                android:id="@+id/img_Note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/edt_note_subtitle" />

            <!--            Delete image button-->
            <ImageView
                android:id="@+id/img_deleteNoteImage"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/bg_delete"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_delete"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/img_Note"
                app:layout_constraintTop_toTopOf="@+id/img_Note"
                app:tint="@color/colorWhite" />

            <!--            For url-->
            <LinearLayout
                android:id="@+id/layout_Url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/img_Note">

                <TextView
                    android:id="@+id/txt_url"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:text="www.google.com"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_13ssp" />

                <!-- Delete Url Button-->
                <ImageView
                    android:id="@+id/img_deleteUrl"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_delete"
                    app:tint="@color/colorDelete" />
            </LinearLayout>

            <EditText
                android:id="@+id/edt_noteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/poppins_regular"
                android:gravity="top"
                android:hint="Type your note ...."
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:paddingHorizontal="@dimen/_4sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:paddingStart="@dimen/_8sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_Url" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <include layout="@layout/layout_miscellanous"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>